Editor: Fix alignment of new section buttons

--- a/static/styles.css
+++ b/static/styles.css
@@ -111,6 +111,10 @@ a:hover {
   margin-top: 0;
 }
 
+.editor .commonform section + .child-button {
+  margin-left: 1rem;
+}
+
 .editor .commonform button {
   margin-top: 0;
   margin-left: 0;
